RESOLVED FIXED 242418
REGRESSION (r221177): Redundant icon fetching in the web process for file inputs
https://bugs.webkit.org/show_bug.cgi?id=242418
Summary REGRESSION (r221177): Redundant icon fetching in the web process for file inputs
Simon Fraser (smfr)
Reported 2022-07-06 20:14:33 PDT
In r221177 there was an inadvertent switching from `icon ? RequestIcon::No : RequestIcon::Yes` to `icon ? RequestIcon::Yes : RequestIcon::No` in what is now FileInputType::didCreateFileList(), which results in a redundant fetch of the file icon in the web process when the UI process already did this and supplied the icon.
Attachments
Simon Fraser (smfr)
Comment 1 2022-07-06 20:19:21 PDT
EWS
Comment 2 2022-07-07 08:34:50 PDT
Committed 252215@main (b58cec34fd85): <https://commits.webkit.org/252215@main> Reviewed commits have been landed. Closing PR #2148 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-07 08:35:16 PDT
Note You need to log in before you can comment on or make changes to this bug.