REGRESSION (r221177): Redundant icon fetching in the web process for file inputs https://bugs.webkit.org/show_bug.cgi?id=242418

Reviewed by Chris Dumez.

In r221177 there was an inadvertent switching from `icon ? RequestIcon::No : RequestIcon::Yes` to
`icon ? RequestIcon::Yes : RequestIcon::No` in what is now FileInputType::didCreateFileList(), which
results in a redundant fetch of the file icon in the web process when the UI process already did
this and supplied the icon. This icon fetching in the web process can trigger sandbox exceptions
(rdar://95988777) so is best avoided.

We can still fetch icons in the web process when restoring state after being killed. This does
triggers sandbox exceptions but the icons do correctly show in the UI.

* Source/WebCore/html/FileInputType.cpp: (WebCore::FileInputType::didCreateFileList):

Canonical link: https://commits.webkit.org/252215@main